--- a/index.html
+++ b/index.html
@@ -157,6 +157,37 @@
             </main>
         </div>
     </div>
+
+    <!-- Modal para editar datos -->
+    <div class="modal fade" id="editDataModal" tabindex="-1" aria-labelledby="editDataModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="editDataModalLabel">Editar Datos</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="editDataForm">
+                        <div class="mb-3">
+                            <label for="editInput1" class="form-label">Campo 1</label>
+                            <input type="text" class="form-control" id="editInput1" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="editInput2" class="form-label">Campo 2</label>
+                            <input type="text" class="form-control" id="editInput2" required>
+                        </div>
+                        <input type="hidden" id="editRowIndex">
+                        <input type="hidden" id="editTableKey">
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                    <button type="button" class="btn btn-primary" id="saveEditData">Guardar Cambios</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="app.js"></script>
 </body>
