--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard CRUD</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -35,44 +35,76 @@
             </nav>
 
             <!-- Modal para agregar datos -->
-<div class="modal fade" id="addDataModal" tabindex="-1" aria-labelledby="modalTitle" aria-hidden="true">
+            <div class="modal fade" id="addDataModal" tabindex="-1" aria-labelledby="modalTitle" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="modalTitle">Agregar Nuevo Registro</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+                        </div>
+                        <div class="modal-body">
+                            <form id="modalForm">
+                                <!-- Fila 1: DNI y Nombre y Apellidos -->
+                                <div class="row g-3">
+                                    <div class="col-md-6">
+                                        <label for="modalInputDNI" class="form-label">DNI</label>
+                                        <input type="text" class="form-control" id="modalInputDNI" required>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <label for="modalInput1" class="form-label">Nombre y Apellidos</label>
+                                        <input type="text" class="form-control" id="modalInput1" required>
+                                    </div>
+                                </div>
+                                <!-- Fila 2: Teléfono y RUC -->
+                                <div class="row g-3">
+                                    <div class="col-md-6">
+                                        <label for="modalInput2" class="form-label">Teléfono</label>
+                                        <input type="text" class="form-control" id="modalInput2" required>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <label for="modalInputRUC" class="form-label">RUC</label>
+                                        <input type="text" class="form-control" id="modalInputRUC" required>
+                                    </div>
+                                </div>
+                                <!-- Fila 3: Dirección y Referencia -->
+                                <div class="row g-3">
+                                    <div class="col-md-6">
+                                        <label for="modalInputDireccion" class="form-label">Dirección</label>
+                                        <input type="text" class="form-control" id="modalInputDireccion" required>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <label for="modalInputReferencia" class="form-label">Referencia</label>
+                                        <input type="text" class="form-control" id="modalInputReferencia" required>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                            <button type="button" class="btn btn-primary" id="saveModalData">Guardar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+<!-- Modal para editar datos -->
+<div class="modal fade" id="editDataModal" tabindex="-1" aria-labelledby="editDataModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="modalTitle">Agregar Nuevo Registro</h5>
+                <h5 class="modal-title" id="editDataModalLabel">Editar Registro</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
             </div>
             <div class="modal-body">
-                <form id="modalForm">
-                    <div class="mb-3">
-                        <label for="modalInputDNI" class="form-label">DNI</label>
-                        <input type="text" class="form-control" id="modalInputDNI" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="modalInput1" class="form-label">Nombre y Apellidos</label>
-                        <input type="text" class="form-control" id="modalInput1" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="modalInput2" class="form-label">Telefono</label>
-                        <input type="text" class="form-control" id="modalInput2" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="modalInputRUC" class="form-label">RUC</label>
-                        <input type="text" class="form-control" id="modalInputRUC" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="modalInputDireccion" class="form-label">Dirección</label>
-                        <input type="text" class="form-control" id="modalInputDireccion" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="modalInputReferencia" class="form-label">Referencia</label>
-                        <input type="text" class="form-control" id="modalInputReferencia" required>
-                    </div>
+                <form id="editDataForm">
+                    <!-- Los campos dinámicos se generarán aquí -->
                 </form>
+                <!-- Campos ocultos para almacenar el índice y la clave de la tabla -->
+                <input type="hidden" id="editRowIndex">
+                <input type="hidden" id="editTableKey">
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                <button type="button" class="btn btn-primary" id="saveModalData">Guardar</button>
+                <button type="button" class="btn btn-primary" id="saveEditData">Guardar Cambios</button>
             </div>
         </div>
     </div>
@@ -85,9 +117,9 @@
                 
                 <!-- Sección Clientes -->
                 <div id="clientes" class="content-section">
-                        <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addDataModal">
-                            Agregar
-                        </button>
+                    <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addDataModal" data-section="clientes">
+                        Agregar
+                    </button>
                     </form>
                     <table class="table table-bordered mt-4">
                         <thead>
@@ -121,9 +153,9 @@
 
                 <!-- Sección Almacén -->
                 <div id="almacen" class="content-section d-none">
-                        <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addDataModal">
-                            Agregar
-                        </button>
+                    <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addDataModal" data-section="almacen">
+                        Agregar
+                    </button>
                     </form>
                     <table class="table table-bordered mt-4">
                         <thead>
@@ -147,9 +179,9 @@
 
                 <!-- Sección Trabajadores -->
                 <div id="trabajadores" class="content-section d-none">
-                        <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addDataModal">
-                            Agregar
-                        </button>
+                    <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addDataModal" data-section="trabajadores">
+                        Agregar
+                    </button>
                     </form>
                     <table class="table table-bordered mt-4">
                         <thead>
@@ -173,9 +205,9 @@
 
                 <!-- Sección Caja -->
                 <div id="caja" class="content-section d-none">
-                        <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addDataModal">
-                            Agregar
-                        </button>
+                    <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addDataModal" data-section="caja">
+                        Agregar
+                    </button>
                     </form>
                     <table class="table table-bordered mt-4">
                         <thead>
