--- a/index.html
+++ b/index.html
@@ -48,11 +48,13 @@
                                 <div class="row g-3">
                                     <div class="col-md-6">
                                         <label for="modalInputDNI" class="form-label">DNI</label>
-                                        <input type="text" class="form-control" id="modalInputDNI" required>
+                                        <input type="text" class="form-control" id="modalInputDNI" maxlength="8" inputmode="numeric" required 
+                                               oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0, 8)">
                                     </div>
                                     <div class="col-md-6">
                                         <label for="modalInput1" class="form-label">Nombre y Apellidos</label>
-                                        <input type="text" class="form-control" id="modalInput1" required>
+                                        <input type="text" class="form-control" id="modalInput1" required 
+                                               oninput="this.value = this.value.replace(/[^a-zA-ZáéíóúÁÉÍÓÚñÑ\s]/g, '')">
                                     </div>
                                 </div>
                                 <!-- Fila 2: Teléfono y RUC -->
