codigo en actualizado 1.0

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <table class="table table-bordered mt-4">
                         <thead>
                             <tr>
-                                <th>ID</th>
+                                <th class="text-center">ID</th>
                                 <th>DNI</th>
                                 <th>Nombre y Apellidos</th>
                                 <th>Teléfono</th>
@@ -78,15 +78,27 @@
                     <table class="table table-bordered mt-4">
                         <thead>
                             <tr>
+                                <th class="text-center">ID</th>
                                 <th>Producto</th>
-                                <th>Cantidad</th>
+                                <th>Descripción</th>
+                                <th>Stock</th>
+                                <th>Precio</th>
+                                <th>Entrada</th>
+                                <th>Salida</th>
+                                <th>Import. Inventario</th>
                                 <th class="table-options">Opciones</th>
                             </tr>
                         </thead>
                         <tbody id="almacenBody">
                             <tr>
+                                <td>1</td>
                                 <td>Ejemplo Producto</td>
+                                <td>Descripción del producto</td>
                                 <td>10</td>
+                                <td>50.00</td>
+                                <td>5</td>
+                                <td>2</td>
+                                <td>100.00</td>
                                 <td>
                                     <button class="btn btn-danger btn-eliminar">Eliminar</button>
                                 </td>
@@ -101,15 +113,25 @@
                     <table class="table table-bordered mt-4">
                         <thead>
                             <tr>
+                                <th class="text-center">ID</th>
+                                <th>Nº Trabajador</th>
                                 <th>Nombre y Apellidos</th>
                                 <th>Cargo</th>
+                                <th>Area</th>
+                                <th>Sexo</th>
+                                <th>Edad</th>
                                 <th class="table-options">Opciones</th>
                             </tr>
                         </thead>
                         <tbody id="trabajadoresBody">
                             <tr>
+                                <td>1</td>
+                                <td>TR001</td>
                                 <td>Ejemplo Trabajador</td>
                                 <td>Gerente</td>
+                                <td>Recursos Humanos</td>
+                                <td>Masculino</td>
+                                <td>18</td>
                                 <td>
                                     <button class="btn btn-danger btn-eliminar">Eliminar</button>
                                 </td>
@@ -124,15 +146,23 @@
                     <table class="table table-bordered mt-4">
                         <thead>
                             <tr>
-                                <th>Concepto</th>
-                                <th>Monto</th>
+                                <th class="text-center">ID</th>
+                                <th>Codigo</th>
+                                <th >Fecha Registro</th>
+                                <th>Descripción</th>
+                                <th>Monto Apertura</th>
+                                <th>Estado</th>
                                 <th class="table-options">Opciones</th>
                             </tr>
                         </thead>
                         <tbody id="cajaBody">
                             <tr>
+                                <td>1</td>
+                                <td>CO001</td>
+                                <td>2023-10-01</td>
                                 <td>Pago de Luz</td>
                                 <td>500</td>
+                                <td>Pagado</td>
                                 <td>
                                     <button class="btn btn-danger btn-eliminar">Eliminar</button>
                                 </td>
